0028404: DRAW - avoid useless preparation of display data when shape is not shown

Class DBRep_DrawableShape is changed to postpone generation of display data until the shape is actually displayed (for the first time).

Test perf draw bug28404 is added.